--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,10 @@ img {
     max-inline-size: 100%;
 }
 
+body {
+    background-color: rgb(204, 102, 77);
+}
+
 header {
     padding: 0 30px 0 10px;
     width: 100%;
@@ -32,6 +36,10 @@ header {
     justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
+    color: white;
+    border-bottom-left-radius: 10px; 
+    border-bottom-right-radius: 10px;
+    box-shadow: 0 7px 10px rgba(0, 0, 0, 0.7);
 }
 
 header > div {
@@ -41,25 +49,78 @@ header > div {
 
 header p {
     line-height: 150px;
-    font-family: 'Permanent Marker', system-ui, -apple-system, 
-        BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 
-        Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 7rem;
-    color: white;
 }
 
 nav {
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
+    margin-top: 50px;
+    font-size: 3rem;
 }
 
 nav > button {
     all: unset;
-    margin-top: 50px;
+    cursor: pointer;
+}
+
+nav > button:hover {
+    color: rgb(106, 90, 205);
+}
+
+.marker, .restaurant-name {
     font-family: 'Permanent Marker', system-ui, -apple-system, 
         BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 
         Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 3rem;
+}
+
+.restaurant-name {
+    font-size: 7rem;
+}
+
+#content {
+    padding: 40px 80px 0 40px;
+    display: flex;
+    justify-content: space-between;
     color: white;
+    
+    
+}
+
+h1 {
+    font-family: Montserrat, system-ui, -apple-system, 
+        BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 
+        Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 5rem;
+    font-weight: 900;
+    margin: 10px 0 25px 0;
+    color: rgb(0, 128, 128);
+}
+
+h2 {
+    font-family: Lato, system-ui, -apple-system, 
+        BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 
+        Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 4rem;
+    color: rgb(106, 90, 205);
+}
+
+#content-nav {
+    margin-top: 2px;
+    padding: 1px 25px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    font-size: 3rem;
+    background-color: rgb(0, 128, 128);
+    border-radius: 40px;
+}
+
+#content-nav > button {
+    all: unset; 
+    cursor: pointer;
+}
+
+#content-nav > button:hover {
+    color: rgb(204, 102, 77);
 }
