--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
 :root {
     line-height: 1.5;
+    --main-color: rgb(204, 102, 77);
+    --subcolor-one: rgba(0, 128, 128, 0.9);
+    --subcolor-two: rgb(255, 204, 77);
+    --bg-color: rgb(255, 241, 236);
+    --text-color: rgb(51, 51, 51);
 }
   
 h1, h2, h3, h4, h5, figure, p, ol, ul {
@@ -22,7 +27,8 @@ img {
 }
 
 body {
-    background-color: rgb(204, 102, 77);
+    background-color: var(--main-color);
+    padding-bottom: 20px;
 }
 
 header {
@@ -62,10 +68,16 @@ nav {
 nav > button {
     all: unset;
     cursor: pointer;
+    padding: 0 20px;
 }
 
 nav > button:hover {
-    color: rgb(106, 90, 205);
+    color: var(--subcolor-two);
+}
+
+.current-page {
+    background-color: var(--subcolor-one);
+    border-radius: 40px;
 }
 
 .marker, .restaurant-name {
@@ -97,16 +109,16 @@ h2 {
     color: white;
 }
 
-.home-content h1 {  
+.home-content h2:first-child {  
     font-size: 5rem;
     font-weight: 900;
     margin: 10px 0 25px 0;
-    color: rgb(0, 128, 128);
+    color: var(--text-color);
 }
 
-.home-content h2 {  
+.home-content h2:last-child {  
     font-size: 4rem;
-    color: rgb(106, 90, 205);
+    color: white;
 }
 
 #content-nav {
@@ -116,7 +128,7 @@ h2 {
     justify-content: space-between;
     flex-wrap: wrap;
     font-size: 3rem;
-    background-color: rgb(0, 128, 128);
+    background-color: var(--subcolor-one);
     border-radius: 40px;
 }
 
@@ -126,5 +138,66 @@ h2 {
 }
 
 #content-nav > button:hover {
-    color: rgb(204, 102, 77);
+    color: var(--subcolor-two);
+}
+
+.menu-content {
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+.container {
+    background-color: var(--bg-color);
+    padding: 0 30px 30px 0;
+    border-radius: 20px;
+    box-shadow: 0 7px 10px rgba(0, 0, 0, 0.7);
+}
+
+.container-title {
+    text-align: center;
+    font-size: 4rem;
+    margin-bottom: 20px;
+    color: var(--subcolor-one);
+}
+
+.container-content {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.menu {
+    display: grid;
+    grid-template-columns: auto 500px;
+    grid-template-rows: 150px;
+    gap: 10px 20px;
+}
+
+.food-image {
+    grid-row: 1 / 3;
+}
+
+.food-name {
+    font-size: 3rem;
+    font-weight: 900;
+}
+
+.food-info {
+    display: grid;
+    grid-template-columns: max-content max-content;
+    grid-template-rows: repeat(4, max-content);
+    column-gap: 30px;
+}
+
+.info-number {
+    font-size: 3rem;
+    font-weight: 800;
+}
+
+.info-text {
+    font-size: 1.5rem;
+    font-weight: 500;
 }
