--- a/src/styles.css
+++ b/src/styles.css
@@ -178,6 +178,8 @@ h2 {
 
 .food-image {
     grid-row: 1 / 3;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .food-name {
