Improve the page padding

--- a/src/styles.css
+++ b/src/styles.css
@@ -28,7 +28,6 @@ img {
 
 body {
     background-color: var(--main-color);
-    padding-bottom: 20px;
 }
 
 header {
@@ -142,7 +141,7 @@ h2 {
 }
 
 .menu-content {
-    padding-top: 30px;
+    padding: 40px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -205,7 +204,7 @@ h2 {
 }
 
 .contact-content {
-    margin: 30px min(100px, 5%);
+    margin: 40px min(100px, 5%);
     padding: 0 50px 30px 30px;
     background-color: var(--bg-color);
     border-radius: 20px;
