--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,7 @@ header {
     padding: 0 30px 0 10px;
     width: 100%;
     height: 500px;
-    background-image: url(main-image-cropped.jpeg);
+    background-image: url(./main-image-cropped.jpg);
     background-size: cover;
     background-position: center;
     display: flex;
