--- a/src/styles.css
+++ b/src/styles.css
@@ -1,237 +1,285 @@
 :root {
-    line-height: 1.5;
-    --main-color: rgb(204, 102, 77);
-    --subcolor-one: rgba(0, 128, 128, 0.9);
-    --subcolor-two: rgb(255, 204, 77);
-    --bg-color: rgb(255, 241, 236);
-    --text-color: rgb(51, 51, 51);
+  line-height: 1.5;
+  --main-color: rgb(204, 102, 77);
+  --subcolor-one: rgba(0, 128, 128, 0.9);
+  --subcolor-two: rgb(255, 204, 77);
+  --bg-color: rgb(255, 241, 236);
+  --text-color: rgb(51, 51, 51);
 }
-  
-h1, h2, h3, h4, h5, figure, p, ol, ul {
-    margin: 0;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+figure,
+p,
+ol,
+ul {
+  margin: 0;
 }
-  
-ol[role="list"], ul[role="list"] {
-    list-style: none;
-    padding-inline: 0;
+
+ol[role="list"],
+ul[role="list"] {
+  list-style: none;
+  padding-inline: 0;
 }
-  
-h1, h2, h3, h4, h5 {
-    font-size: inherit;
-    font-weight: inherit;
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-size: inherit;
+  font-weight: inherit;
 }
 
 img {
-    display: block;
-    max-inline-size: 100%;
+  display: block;
+  max-inline-size: 100%;
 }
 
 body {
-    background-color: var(--main-color);
+  position: relative;
+  z-index: 0;
+  min-height: 100vh;
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: black;
+  z-index: -2;
+}
+
+body::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: var(--main-color);
+  filter: blur(30px);
+  z-index: -1;
 }
 
 header {
-    padding: 0 30px 0 10px;
-    width: 100%;
-    height: 500px;
-    background-image: url(./main-image-cropped.jpg);
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    color: white;
-    border-bottom-left-radius: 10px; 
-    border-bottom-right-radius: 10px;
-    box-shadow: 0 7px 10px rgba(0, 0, 0, 0.7);
+  padding: 0 30px 0 10px;
+  width: 100%;
+  height: 500px;
+  background-image: url(./main-image-cropped.jpg);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  color: white;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  box-shadow: 0 7px 10px rgba(0, 0, 0, 0.7);
 }
 
 header > div {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 header p {
-    line-height: 150px;
+  line-height: 150px;
 }
 
 nav {
-    display: flex;
-    gap: 30px;
-    flex-wrap: wrap;
-    margin-top: 50px;
-    font-size: 3rem;
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+  margin-top: 50px;
+  font-size: 3rem;
 }
 
 nav > button {
-    all: unset;
-    cursor: pointer;
-    padding: 0 20px;
+  all: unset;
+  cursor: pointer;
+  padding: 0 20px;
+  position: relative;
+  z-index: 0;
+}
+
+nav > button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-image: url("pngegg.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0;
+  transition: opacity 0.5s ease-out;
+  z-index: -1;
 }
 
 nav > button:hover {
-    color: var(--subcolor-two);
+  color: var(--subcolor-two);
 }
 
-.current-page {
-    background-color: var(--subcolor-one);
-    border-radius: 40px;
+.current-page::before {
+  opacity: 1;
 }
 
-.marker, .restaurant-name {
-    font-family: 'Permanent Marker', system-ui, -apple-system, 
-        BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 
-        Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.marker,
+.restaurant-name {
+  font-family: "Permanent Marker", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 .restaurant-name {
-    font-size: 7rem;
+  font-size: 7rem;
 }
 
 h1 {
-    font-family: Montserrat, system-ui, -apple-system, 
-        BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 
-        Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 h2 {
-    font-family: Lato, system-ui, -apple-system, 
-        BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 
-        Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Lato, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .home-content {
-    padding: 40px 80px 0 40px;
-    display: flex;
-    justify-content: space-between;
-    color: white;
+  padding: 40px 80px 0 40px;
+  display: flex;
+  justify-content: space-between;
+  color: white;
 }
 
-.home-content h2:first-child {  
-    font-size: 5rem;
-    font-weight: 900;
-    margin: 10px 0 25px 0;
-    color: var(--text-color);
+.home-content h2:first-child {
+  font-size: 5rem;
+  font-weight: 900;
+  margin: 10px 0 25px 0;
+  color: var(--text-color);
 }
 
-.home-content h2:last-child {  
-    font-size: 4rem;
-    color: white;
+.home-content h2:last-child {
+  font-size: 4rem;
+  color: white;
 }
 
 #content-nav {
-    margin-top: 2px;
-    padding: 1px 25px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    font-size: 3rem;
-    background-color: var(--subcolor-one);
-    border-radius: 40px;
+  margin-top: 2px;
+  padding: 1px 25px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  font-size: 3rem;
+  background-color: var(--subcolor-one);
+  border-radius: 40px;
+  box-shadow: inset 0 2px 5px rgba(255, 255, 255, 0.1),
+    inset 0 -2px 5px rgba(0, 0, 0, 0.4), 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 #content-nav > button {
-    all: unset; 
-    cursor: pointer;
+  all: unset;
+  cursor: pointer;
 }
 
 #content-nav > button:hover {
-    color: var(--subcolor-two);
+  color: var(--subcolor-two);
 }
 
 .menu-content {
-    padding: 40px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
+  padding: 40px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
 }
 
 .container {
-    background-color: var(--bg-color);
-    padding: 0 30px 30px 0;
-    border-radius: 20px;
-    box-shadow: 0 7px 10px rgba(0, 0, 0, 0.7);
+  background-color: var(--bg-color);
+  padding: 0 30px 30px 0;
+  border-radius: 20px;
+  box-shadow: 0 7px 10px rgba(0, 0, 0, 0.7);
 }
 
 .container-title {
-    text-align: center;
-    font-size: 4rem;
-    margin-bottom: 20px;
-    color: var(--subcolor-one);
+  text-align: center;
+  font-size: 4rem;
+  margin-bottom: 20px;
+  color: var(--subcolor-one);
 }
 
 .container-content {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .menu {
-    display: grid;
-    grid-template-columns: auto 500px;
-    grid-template-rows: 150px;
-    gap: 10px 20px;
+  display: grid;
+  grid-template-columns: auto 500px;
+  grid-template-rows: 150px;
+  gap: 10px 20px;
 }
 
 .food-image {
-    grid-row: 1 / 3;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
+  grid-row: 1 / 3;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
 .food-name {
-    font-size: 3rem;
-    font-weight: 900;
+  font-size: 3rem;
+  font-weight: 900;
 }
 
 .food-info {
-    display: grid;
-    grid-template-columns: max-content max-content;
-    grid-template-rows: repeat(4, max-content);
-    column-gap: 30px;
+  display: grid;
+  grid-template-columns: max-content max-content;
+  grid-template-rows: repeat(4, max-content);
+  column-gap: 30px;
 }
 
 .info-number {
-    font-size: 3rem;
-    font-weight: 800;
+  font-size: 3rem;
+  font-weight: 800;
 }
 
 .info-text {
-    font-size: 1.5rem;
-    font-weight: 500;
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 
 .contact-content {
-    margin: 40px min(100px, 5%);
-    padding: 0 50px 30px 30px;
-    background-color: var(--bg-color);
-    border-radius: 20px;
-    box-shadow: 0 7px 10px rgba(0, 0, 0, 0.7);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  margin: 40px min(100px, 5%);
+  padding: 0 50px 30px 30px;
+  background-color: var(--bg-color);
+  border-radius: 20px;
+  box-shadow: 0 7px 10px rgba(0, 0, 0, 0.7);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .contact-content p {
-    font-size: 5rem;
-    margin-bottom: 20px
+  font-size: 5rem;
+  margin-bottom: 20px;
 }
 
 .contact-content h1 {
-    font-size: 3rem;
-    font-weight: 700;
-    margin: 20px 0;
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 20px 0;
 }
 
 .detail-grid {
-    display: grid;
-    grid-template-columns: max-content max-content;
-    align-items: center;
-    gap: 8px 20px;
+  display: grid;
+  grid-template-columns: max-content max-content;
+  align-items: center;
+  gap: 8px 20px;
 }
 
 .detail-grid > h2 {
-    font-size: 1.8rem;
+  font-size: 1.8rem;
 }
