--- a/src/styles.css
+++ b/src/styles.css
@@ -65,7 +65,7 @@ body::after {
 header {
   padding: 0 30px 0 10px;
   width: 100%;
-  height: 500px;
+  min-height: 500px;
   background-image: url(./main-image-cropped.jpg);
   background-size: cover;
   background-position: center;
@@ -86,6 +86,10 @@ header > div {
 
 header p {
   line-height: 150px;
+}
+
+header > div > img {
+  width: 150px;
 }
 
 nav {
@@ -252,7 +256,7 @@ h2 {
 }
 
 .contact-content {
-  margin: 40px min(100px, 5%);
+  margin: 40px 100px;
   padding: 0 50px 30px 30px;
   background-color: var(--bg-color);
   border-radius: 20px;
@@ -282,4 +286,46 @@ h2 {
 
 .detail-grid > h2 {
   font-size: 1.8rem;
+}
+
+@media (max-width: 1200px) {
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  header {
+    padding-bottom: 20px;
+    min-height: 400px;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .home-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    flex: 1;
+    margin-bottom: 80px;
+  }
+}
+
+@media (max-width: 600px) {
+  header {
+    min-height: 200px;
+  }
+
+  header > div > img {
+    width: 70px;
+  }
+
+  .restaurant-name {
+    font-size: 3rem;
+    line-height: 1.5;
+  }
+
+  nav > button {
+    font-size: 1rem;
+  }
 }
