--- a/src/styles.css
+++ b/src/styles.css
@@ -231,6 +231,7 @@ h2 {
   grid-row: 1 / 3;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
+  width: 400px;
 }
 
 .food-name {
@@ -309,6 +310,27 @@ h2 {
     flex: 1;
     margin-bottom: 80px;
   }
+
+  .menu {
+    grid-template-columns: auto 250px;
+    grid-template-rows: 75px;
+  }
+
+  .food-image {
+    width: 200px;
+  }
+
+  .food-name {
+    font-size: 1.5rem;
+  }
+
+  .info-number {
+    font-size: 1.5rem;
+  }
+
+  .info-text {
+    font-size: 0.8rem;
+  }
 }
 
 @media (max-width: 600px) {
@@ -326,6 +348,90 @@ h2 {
   }
 
   nav > button {
+    font-size: 1rem;
+  }
+
+  .home-content {
+    padding: 40px 40px 0 40px;
+  }
+
+  .home-content > div:first-child {
+    margin-top: 70px;
+  }
+
+  .home-content > div > h2:first-child {
+    font-size: 2rem;
+    margin: 0;
+  }
+
+  .home-content > div > h2:last-child {
+    font-size: 1.5rem;
+  }
+
+  .home-content > div:last-child {
+    align-self: stretch;
+    margin: 0 20px;
+  }
+
+  .home-content > div:last-child > p {
+    text-align: center;
+  }
+
+  #content-nav {
+    font-size: 1.5rem;
+  }
+
+  .container {
+    padding-right: 10px;
+  }
+
+  .container-title {
+    font-size: 2rem;
+  }
+
+  .menu {
+    grid-template-columns: auto 150px;
+    grid-template-rows: 40px;
+  }
+
+  .food-image {
+    width: 130px;
+  }
+
+  .food-name {
+    font-size: 1rem;
+  }
+
+  .info-number {
+    font-size: 1rem;
+  }
+
+  .info-text {
+    font-size: 0.5rem;
+  }
+
+  .contact-content {
+    margin: 40px 50px;
+  }
+
+  .contact-content p {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+
+  .contact-content h1 {
+    font-size: 1.5rem;
+  }
+
+  .detail-grid {
+    grid-template-columns: auto auto;
+  }
+
+  .detail-grid > img {
+    width: 25px;
+  }
+
+  .detail-grid > h2 {
     font-size: 1rem;
   }
 }
