--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@ header {
   padding: 0 30px 0 10px;
   width: 100%;
   min-height: 500px;
-  background-image: url(./main-image-cropped.jpg);
+  background-image: url(./main-image-cropped.jpg?as=webp);
   background-size: cover;
   background-position: center;
   display: flex;
